--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
      <span class="icon" ><ion-icon name="logo-twitter" role="img" class="md hydrated"></ion-icon></span> 
      <span class="icon"> <ion-icon name="logo-instagram" role="img" class="md hydrated"></ion-icon></span> -->
 
-           <span class="face"><i class="fa fa-facebook" title="Edit"></i></span> 
-     <span class="face"><i class="fa fa-twitter" title="Edit"></i></span> 
-     <span class="face"><i class="fa fa-instagram" title="Edit"></i></span>  
+           <span class="icon"><i class="fa fa-facebook" title="Edit"></i></span> 
+     <span class="icon"><i class="fa fa-twitter" title="Edit"></i></span> 
+     <span class="icon"><i class="fa fa-instagram" title="Edit"></i></span>  
 
   
 
